# shopvac

./: .gitignore  Cargo.toml  Dockerfile  README.md  base  bundle.Dockerfile
.tekton/: shopvac-pull-request.yaml  shopvac-push.yaml
hack/: crd.yaml  role.yaml
operator/manifests/: crd.yaml  csv.yaml  role.yaml
operator/metadata/: annotations.yaml
src/: main.rs
