[package]
name = "shopvac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.69.1", features = [
    "runtime",
    "derive",
] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1.14.0", features = ["full"] }
chrono = "*"

futures = "0.3.21"
clap = { version = "3.1.6", features = ["derive"] }